--- a/lite/AndroidManifest.xml
+++ b/lite/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.transdroid.lite"
-	android:versionCode="2"
-	android:versionName="2.0-alpha2" >
+	android:versionCode="3"
+	android:versionName="2.0-alpha3" >
 
 	<uses-sdk
 		android:minSdkVersion="7"
@@ -16,6 +16,7 @@
 		android:xlargeScreens="true" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -26,10 +27,10 @@
 
 	<application
 		android:allowBackup="true"
+		android:hardwareAccelerated="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/system_name"
-		android:theme="@style/Theme.Sherlock"
-		android:hardwareAccelerated="true" >
+		android:theme="@style/Theme.Sherlock" >
 
 		<!-- Main activities -->
 		<activity
@@ -153,6 +154,20 @@
 		<activity android:name="org.transdroid.core.gui.settings.NotificationSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.SystemSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.navigation.DialogHelper_" />
+
+		<!-- Background service -->
+		<service android:name="org.transdroid.core.service.ServerCheckerService_" />
+		<service android:name="org.transdroid.core.service.RssCheckerService_" />
+		<service android:name="org.transdroid.core.service.AppUpdateService_" />
+
+		<receiver android:name="org.transdroid.core.service.AlarmReceiver_" />
+		<receiver android:name="org.transdroid.core.service.BootReceiver_" >
+			<intent-filter>
+				<action
+					android:name="android.intent.action.BOOT_COMPLETED"
+					android:value="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
 	</application>
 
 </manifest>
